*** WooCommerce Extension Changelog ***

# 1.4.0
    * Add support for WC Subscriptions plugin.

# 1.3.1
    * Added the possibility to create empty Payment Plan. The merchant must leave the Payment Plan field empty.
    * When create Nuvei Payment plan "Select a Plan..." option was renamed to "Without Plan".
    * When edit Nuvei Payment plans "Without Plan" option is available.
    * Force transaction type to Auth when Order total amount is 0.

# 1.3.0
    * Allow checkout with any combination of products.
    * Enable using Nuvei Payment Plans for product with attribute only, without variations.
    * Do not pass Product data by open/updateOrder request.
    * Do not pass Subscription data by open/updateOrder request, but keep it in WC session. Just before redirect to the success page save it as Order meta data.
    * Logs directory was moved to wp-content/uploads/nuvei-logs.
    * Removed old log directory from the plugin.
    * Removed the option to change the DMN URL.
    * Removed the option to read the Today log file. Any file manager plugin can be use instead.

# 1.2.4
    * Fix for the case when updateOrder does not upgrade empty userTokenId.
    * Do not validate and process the Tokenization DMNs.
    * When click on Pay button check if the products are still in stock.

# 1.2.3
    * Fix the links to Nuvei documentation into the plugin settings.
    * Do not process Pending DMNs.
    * Check for set integration_type before try to use it.
    * Changes into the readme file.
    * Added NUVEI_LOGS_DIR constant. Save all plugin generated files in it.
    * Removed tmp folder.
    * The Notify URL provided to Nuvei Integration/TechSupport Team must be updated!

# 1.2.2
    * Fixed the missing message for Insufficient funds.
    * Tested on WP 6.1.1 and WC 7.3.0.

# 1.2.1
    * After approved transaction, do not click on #place_order button, but submit form.checkout if exists.
    * Tested on WP 6.1.1 and WC 7.1.0.

# 1.2.0