@@ -36,7 +36,7 @@ function nuveiAfterSdkResponse(resp) {
             return;
         }
         
-        jQuery('#nuvei_checkout_errors').html('<b>' + scTrans.TransactionAppr + '</b>');
+//        jQuery('#nuvei_checkout_errors').html('<b>' + scTrans.TransactionAppr + '</b>');
         jQuery('#nuvei_checkout').remove();
         jQuery('form.checkout').trigger('submit');
 		return;
