@@ -2,6 +2,7 @@
 
 # 1.4.0
     * Add support for WC Subscriptions plugin.
+    * Added a script to remove the WCS Pay button on Thank-you page.
 
 # 1.3.1
     * Added the possibility to create empty Payment Plan. The merchant must leave the Payment Plan field empty.
